@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(usbprog, 0.1.0, bernhard.walle@gmx.de)
+AC_INIT(usbprog, 0.1.1, bernhard.walle@gmx.de)
 AC_CONFIG_SRCDIR([usbprog/usbprog.h])
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_HEADERS([config.h])
