@@ -35,6 +35,7 @@ std::string strip(std::string a);
 unsigned long parse_long(const char *string);
 std::string wordwrap(const std::string &text, size_t margins);
 unsigned int usbprog_sleep(unsigned int seconds);
+unsigned int usbprog_msleep(unsigned int msec);
 
 #endif /* USBPROG_UTIL_H */
 
