@@ -1,6 +1,7 @@
 0.1.1
 -----
  * compilation and build fixes
+ * CLI: improve debugging messages
 
 0.1.0 (2007-12-27, r877)
 -----
